<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.common.mysessions.My_Sessions">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">



            <TextView
                android:id="@+id/textView_TBR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ULC TBR"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="200dp"

                    android:layout_marginRight="25dp"

                    android:text="MENU ">

                </TextView>

                <Spinner
                    android:id="@+id/spinner_homeMenu"
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="115dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_studentSession"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Student Sessions"
                        android:layout_marginLeft="15dp">

                    </Button>

                    <Button
                        android:id="@+id/button_tutorSessions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tutor Sessions"
                        android:layout_marginLeft="25dp">

                    </Button>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView_sessionType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="My Sessions" />

                    <ListView
                        android:id="@+id/listView_sessions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:scrollbars="vertical" />


                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

